fix aligning

--- a/dashboard/src/app/workspaces/create-workspace/create-workspace.styl
+++ b/dashboard/src/app/workspaces/create-workspace/create-workspace.styl
@@ -3,6 +3,10 @@
   top 56px
   z-index 2
 
+.create-workspace-toolbar
+  .che-toolbar-header > div:last-child
+    bottom 9px
+
 .create-workspace-header-button .che-button-dropdown
   button.che-button,
   .fa-caret-down
