--- a/dashboard/src/components/widget/button-dropdown/che-button-dropdown.styl
+++ b/dashboard/src/components/widget/button-dropdown/che-button-dropdown.styl
@@ -29,7 +29,7 @@
           font-size 15px
       .fa-caret-down:before
         position relative
-        top 4px
+        top 2px
     button[disabled] md-icon:before
       color #9F9F9F !important
     button:not([disabled]) md-icon:before
